prost-reflect-derive/tests/attr_unknown_field.stderr
error: unknown argument (expected 'file_descriptor' or 'message_name')
 --> tests/attr_unknown_field.rs:4:17
  |
4 | #[prost_reflect(foo = 123)]
  |                 ^^^
